<resources>
    <string name="app_name">MovieApp</string>
    <string name="nameFilms">Avengers:\nEndgame</string>
    <string name="nameFilmsCard">Avengers:Endgame</string>
    <string name="genre_of_films">Action, Adventure, Fantasy</string>
    <string name="rating_number">125 Reviews</string>
    <string name="back">Back</string>
    <string name="age">13+</string>
    <string name="storyline">Storyline</string>
    <string name="storyLineText">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="HeadingOfCast">Cast</string>
    <string name="name_downey_jr">Robert\nDowney Jr.</string>
    <string name="name_evans">Chris\nEvans</string>
    <string name="name_ruffalo">Mark\nRuffalo</string>
    <string name="name_hemsworth">Chris\nHemsworth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_list">Movies list</string>
    <string name="timeFilms">137 MIN</string>
</resources>