<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191926"
    tools:context=".MoviesListFragment">

    <TextView
        android:id="@+id/tvTitleList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="135dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/movies_list"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/shape"
        app:layout_constraintEnd_toStartOf="@+id/tvTitleList"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayoutCardMovie"
        android:layout_width="170dp"
        android:layout_height="296dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="27dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleList"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivPoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="166dp"
            android:layout_height="248dp"
            android:src="@drawable/gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_viewAgeRestrictions"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            card_view:cardBackgroundColor="#191926"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/ageRestrictions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_black"
                android:gravity="center"
                android:text="@string/age"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/genreOfFilms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:lineHeight="12sp"
            android:text="@string/genreOfFilms"
            android:textColor="#FF3466"
            android:textSize="8sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/ivPoster"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="22dp"
            />

        <ImageView
            android:id="@+id/starIconP1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:src="@drawable/star_icon_plus_8px"
            app:layout_constraintStart_toStartOf="@+id/genreOfFilms"
            app:layout_constraintTop_toBottomOf="@id/genreOfFilms" />

        <ImageView
            android:id="@+id/starIconP2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/star_icon_plus_8px"
            app:layout_constraintStart_toEndOf="@id/starIconP1"
            app:layout_constraintTop_toBottomOf="@id/genreOfFilms" />

        <ImageView
            android:id="@+id/starIconP3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/star_icon_plus_8px"
            app:layout_constraintStart_toEndOf="@id/starIconP2"
            app:layout_constraintTop_toBottomOf="@id/genreOfFilms" />

        <ImageView
            android:id="@+id/starIconP4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/star_icon_plus_8px"
            app:layout_constraintStart_toEndOf="@id/starIconP3"
            app:layout_constraintTop_toBottomOf="@id/genreOfFilms" />

        <ImageView
            android:id="@+id/starIconP5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/star_icon_minus_8px"
            app:layout_constraintStart_toEndOf="@id/starIconP4"
            app:layout_constraintTop_toBottomOf="@id/genreOfFilms" />

        <TextView
            android:id="@+id/numOfReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/roboto_black"
            android:lineHeight="12px"
            android:text="@string/rating_number"
            android:textColor="#6D6D80"
            android:textSize="8sp"
            app:layout_constraintStart_toEndOf="@id/starIconP5"
            app:layout_constraintTop_toBottomOf="@id/genreOfFilms" />

        <TextView
            android:id="@+id/nameOfFilmsCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:lineHeight="20sp"
            android:text="@string/nameFilmsCard"
            android:textColor="@color/nameColor"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/ivPoster"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeFilms"
            app:layout_constraintTop_toBottomOf="@id/nameOfFilmsCard"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/roboto_black"
            android:textColor="#565665"
            android:textSize="8sp"
            android:lineHeight="12px"
            android:layout_marginStart="8dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>